# DermaScan-Machine-Learning

./: .gitignore  DBMS_Final_Project.ipynb  EDA_Exploratory_Data_Analysis.ipynb  Model.ipynb  README.md  Test.ipynb  Untitled6.ipynb  efficientnet-transfer-learning.ipynb  efficientnetb5-transfer-learning.ipynb  main.ipynb  pyproject.toml
