[project]
name = "capstone-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imutils>=0.5.4",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "tensorflow[and-cuda]>=2.14.0",
]
