[project]
name = "capstone-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imutils>=0.5.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy==1.*",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]==2.15.*",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff]
extend-include = ["*.ipynb"]
